Updated css to fix overlapping menus

--- a/Style/style2.css
+++ b/Style/style2.css
@@ -104,6 +104,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	text-align: center;
+	margin-left: 200px;
 }
 
 
